Fixed padding in Send us a Message on mobile devices; Fixed url in privacy.html getting out of container

--- a/scss/pages/_help.scss
+++ b/scss/pages/_help.scss
@@ -82,8 +82,11 @@
     }
   }
   .send-message--container {
-    padding: 2rem;
+    padding: 1rem 0;
     margin: 0 auto;
+    @include respond(desktop) {
+      padding: 2rem;
+    }
     .media {
       figure {
         display: block;
